--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
     },
     "rules": {
         "no-console": "off",
-        "no-underscore-dangle": 0
+        "no-underscore-dangle": 0,
+        "camelcase": 0
     }
 }
